# sample-stack

./: pyproject.toml
.github/workflows/: ci.yml
lambda1/: lambda1.py  requirements.txt
lambda2/: lambda2.py  requirements.txt
tests/tests_lambda1/: test_lambda1.py
tests/tests_lambda2/: test_lambda2.py
