[project]
name = "sample-stack"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jeanmichel_nwsb", email = "jeanmichel@momentslab.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
test_lambda1.cmd = "pytest -vv --cov=lambda1 --cov-report term-missing --cov-report xml ./tests/tests_lambda1"
test_lambda1.env = {PYTHONPATH="."}
test_lambda2.cmd = "pytest -vv --cov=lambda2 --cov-report term-missing --cov-report xml ./tests/tests_lambda2"
test_lambda2.env = {PYTHONPATH="."}
genreqs_lambda1 = "pdm export -o lambda1/requirements.txt --without-hashes -G lambda1"
genreqs_lambda2 = "pdm export -o lambda2/requirements.txt --without-hashes -G lambda2"

[dependency-groups]
lambda1 = [
    "git+https://github.com/jeanmichel-nwsb/sample-module.git",
    "aws-lambda-powertools>=3.20.0",
    "boto3>=1.40.35",
]
lambda2 = [
    "git+https://github.com/jeanmichel-nwsb/sample-module.git",
    "aws-lambda-powertools>=3.20.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-clarity>=1.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
]
